problems with train function

--- a/reinforcement_learning/q_learning/frozen_lake.ipynb
+++ b/reinforcement_learning/q_learning/frozen_lake.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -18,9 +18,6 @@
      "text": [
       "\n",
       "[notice] A new release of pip is available: 23.0.1 -> 23.2.1\n",
-      "[notice] To update, run: C:\\Users\\clayb\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n",
-      "\n",
-      "[notice] A new release of pip is available: 23.0.1 -> 23.2.1\n",
       "[notice] To update, run: C:\\Users\\clayb\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     },
@@ -29,9 +26,18 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: gym in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.26.2)\n",
+      "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (2.2.1)\n",
       "Requirement already satisfied: gym-notices>=0.0.4 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (0.0.8)\n",
-      "Requirement already satisfied: numpy>=1.18.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.25.2)\n",
-      "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (2.2.1)\n"
+      "Requirement already satisfied: numpy>=1.18.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.25.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 23.2.1\n",
+      "[notice] To update, run: C:\\Users\\clayb\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -48,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,32 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "action_space_size = env.action_space.n\n",
     "state_space_size = env.observation_space.n\n",
@@ -94,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,13 +100,65 @@
     "    if desc is None and map_name is None:\n",
     "        desc = generate_random_map(size=8)\n",
     "\n",
-    "    return gym.make('FrozenLake-v0', desc=desc,\n",
+    "    return gym.make('FrozenLake-v1', desc=desc,\n",
     "                    map_name=map_name, is_slippery=is_slippery)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[b'S' b'F' b'F' b'F' b'F' b'F' b'F' b'H']\n",
+      " [b'H' b'F' b'F' b'F' b'F' b'H' b'F' b'F']\n",
+      " [b'F' b'H' b'F' b'H' b'H' b'F' b'F' b'F']\n",
+      " [b'F' b'F' b'F' b'H' b'F' b'F' b'F' b'F']\n",
+      " [b'F' b'F' b'F' b'F' b'F' b'F' b'H' b'F']\n",
+      " [b'F' b'F' b'F' b'F' b'F' b'F' b'F' b'F']\n",
+      " [b'F' b'F' b'F' b'F' b'H' b'F' b'F' b'F']\n",
+      " [b'F' b'F' b'F' b'F' b'F' b'F' b'F' b'G']]\n",
+      "[(1.0, 0, 0.0, False)]\n",
+      "[[b'S' b'F' b'H' b'F' b'H' b'F' b'H' b'F']\n",
+      " [b'H' b'F' b'F' b'F' b'F' b'F' b'F' b'F']\n",
+      " [b'F' b'F' b'F' b'F' b'F' b'F' b'F' b'F']\n",
+      " [b'F' b'H' b'F' b'F' b'F' b'F' b'F' b'F']\n",
+      " [b'F' b'F' b'H' b'F' b'F' b'F' b'F' b'H']\n",
+      " [b'F' b'F' b'F' b'F' b'F' b'H' b'F' b'H']\n",
+      " [b'F' b'F' b'H' b'F' b'H' b'F' b'H' b'F']\n",
+      " [b'F' b'F' b'H' b'F' b'F' b'F' b'F' b'G']]\n",
+      "[(0.3333333333333333, 0, 0.0, False), (0.3333333333333333, 0, 0.0, False), (0.3333333333333333, 8, 0.0, True)]\n",
+      "[[b'S' b'F' b'F']\n",
+      " [b'F' b'H' b'H']\n",
+      " [b'F' b'F' b'G']]\n",
+      "[[b'S' b'F' b'F' b'F']\n",
+      " [b'F' b'H' b'F' b'H']\n",
+      " [b'F' b'F' b'F' b'H']\n",
+      " [b'H' b'F' b'F' b'G']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "env = load_frozen_lake()\n",
+    "print(env.desc)\n",
+    "print(env.P[0][0])\n",
+    "env = load_frozen_lake(is_slippery=True)\n",
+    "print(env.desc)\n",
+    "print(env.P[0][0])\n",
+    "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
+    "env = load_frozen_lake(desc=desc)\n",
+    "print(env.desc)\n",
+    "env = load_frozen_lake(map_name='4x4')\n",
+    "print(env.desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +169,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(64, 4)\n",
+      "(64, 4)\n",
+      "(9, 4)\n",
+      "(16, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = load_frozen_lake()\n",
+    "Q = q_init(env)\n",
+    "print(Q.shape)\n",
+    "env = load_frozen_lake(is_slippery=True)\n",
+    "Q = q_init(env)\n",
+    "print(Q.shape)\n",
+    "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
+    "env = load_frozen_lake(desc=desc)\n",
+    "Q = q_init(env)\n",
+    "print(Q.shape)\n",
+    "env = load_frozen_lake(map_name='4x4')\n",
+    "Q = q_init(env)\n",
+    "print(Q.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +216,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
+    "env = load_frozen_lake(desc=desc)\n",
+    "Q = q_init(env)\n",
+    "Q[7] = np.array([0.5, 0.7, 1, -1])\n",
+    "np.random.seed(0)\n",
+    "print(epsilon_greedy(Q, 7, 0.5))\n",
+    "np.random.seed(1)\n",
+    "print(epsilon_greedy(Q, 7, 0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,12 +266,89 @@
     "                break\n",
     "        epsilon = min_epsilon + (epsilon - min_epsilon) * np.exp(-epsilon_decay * episode)\n",
     "        total_rewards.append(rewards)\n",
+    "\n",
+    "\n",
     "    return Q, total_rewards"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[121], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m env \u001b[39m=\u001b[39m load_frozen_lake(desc\u001b[39m=\u001b[39mdesc)\n\u001b[0;32m      4\u001b[0m Q \u001b[39m=\u001b[39m q_init(env)\n\u001b[1;32m----> 6\u001b[0m Q, total_rewards  \u001b[39m=\u001b[39m train(env, Q)\n\u001b[0;32m      7\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[0;32m      8\u001b[0m split_rewards \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msplit(np\u001b[39m.\u001b[39marray(total_rewards), \u001b[39m10\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[119], line 11\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(env, Q, episodes, max_steps, alpha, gamma, epsilon, min_epsilon, epsilon_decay)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(max_steps):\n\u001b[0;32m     10\u001b[0m     action \u001b[39m=\u001b[39m epsilon_greedy(Q, state, epsilon)\n\u001b[1;32m---> 11\u001b[0m     new_state, reward, done, action \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mstep(action)\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m done \u001b[39mand\u001b[39;00m reward \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     13\u001b[0m         reward \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 4)"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
+    "env = load_frozen_lake(desc=desc)\n",
+    "Q = q_init(env)\n",
+    "\n",
+    "Q, total_rewards  = train(env, Q)\n",
+    "print(Q)\n",
+    "split_rewards = np.split(np.array(total_rewards), 10)\n",
+    "for i, rewards in enumerate(split_rewards):\n",
+    "    print((i+1) * 500, ':', np.mean(rewards))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "********Average reward per thousand episodes********\n",
+      "\n",
+      "1000 :  99.9999999999986\n",
+      "2000 :  99.9999999999986\n",
+      "3000 :  99.9999999999986\n",
+      "4000 :  99.9999999999986\n",
+      "5000 :  99.9999999999986\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DummyEnv:\n",
+    "    def __init__(self):\n",
+    "        self.action_space = self.DummyActionSpace()\n",
+    "        \n",
+    "    class DummyActionSpace:\n",
+    "        def sample(self):\n",
+    "            return np.random.choice([0, 1])  # Assuming two actions: 0 and 1\n",
+    "\n",
+    "    def reset(self):\n",
+    "        return 0\n",
+    "\n",
+    "    def step(self, action):\n",
+    "        return 1, 1, False, {}\n",
+    "\n",
+    "\n",
+    "# Main Section\n",
+    "if __name__ == \"__main__\":\n",
+    "    env = DummyEnv()  # Initialize the environment\n",
+    "    Q = np.zeros((2, 2))  # Initialize the Q-table\n",
+    "    \n",
+    "    # Train the agent and get the final Q-values and total rewards\n",
+    "    Q, total_rewards = train(env, Q)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +365,30 @@
     "        if done:\n",
     "            break\n",
     "    return total_rewards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "********Q-table********\n",
+      "\n",
+      "[[100. 100.]\n",
+      " [100. 100.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print updated Q-table\n",
+    "print(\"\\n\\n********Q-table********\\n\")\n",
+    "print(Q)\n"
    ]
   }
  ],
