--- a/reinforcement_learning/q_learning/frozen_lake.ipynb
+++ b/reinforcement_learning/q_learning/frozen_lake.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -26,9 +26,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: gym in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.26.2)\n",
+      "Requirement already satisfied: numpy>=1.18.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.25.2)\n",
       "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (2.2.1)\n",
-      "Requirement already satisfied: gym-notices>=0.0.4 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (0.0.8)\n",
-      "Requirement already satisfied: numpy>=1.18.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.25.2)\n"
+      "Requirement already satisfied: gym-notices>=0.0.4 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (0.0.8)\n"
      ]
     },
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +63,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "action_space_size = env.action_space.n\n",
     "state_space_size = env.observation_space.n\n",
@@ -77,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +247,7 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "2\n"
+      "0\n"
      ]
     }
    ],
@@ -242,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,19 +275,33 @@
     "    \"\"\"Train agent to learn Q-values.\"\"\"\n",
     "    total_rewards = []\n",
     "    for episode in range(episodes):\n",
-    "        state = env.reset()\n",
+    "        # initialize new episode parameters\n",
+    "        state = env.reset()[0]\n",
+    "        done = False\n",
     "        rewards = 0\n",
+    "\n",
     "        for step in range(max_steps):\n",
-    "            action = epsilon_greedy(Q, state, epsilon)\n",
-    "            new_state, reward, done, info = env.step(action)\n",
-    "            if done and reward == 0:\n",
-    "                reward = -1\n",
-    "            Q[state, action] = (1 - alpha) * Q[state, action] + alpha * (reward + gamma * np.max(Q[new_state]))\n",
-    "            state = new_state\n",
-    "            rewards += reward\n",
-    "            if done:\n",
-    "                break\n",
-    "        epsilon = min_epsilon + (epsilon - min_epsilon) * np.exp(-epsilon_decay * episode)\n",
+    "            # exploration/exploitation trade-off\n",
+    "            exploration_rate_threshold = random.uniform(0, 1)\n",
+    "            if exploration_rate_threshold > epsilon:\n",
+    "                action = np.argmax(Q[state,: ])\n",
+    "            else:\n",
+    "                action = env.action_space.sample()\n",
+    "        new_state, reward, done, truncated, info = env.step(action)\n",
+    "        # Update Q-table for Q(s,a)\n",
+    "        Q[state, action] = Q[state, action] * (1 - alpha) + \\\n",
+    "        alpha * (reward + gamma * np.max(Q[new_state, :]))\n",
+    "\n",
+    "        state = new_state\n",
+    "        rewards_current_episode += reward \n",
+    "\n",
+    "        if done == True:\n",
+    "            break\n",
+    "\n",
+    "        # Exploration rate decay\n",
+    "        alpha = min_epsilon + \\\n",
+    "    (max_steps - min_epsilon) * np.exp(-epsilon_decay*episode)\n",
+    "\n",
     "        total_rewards.append(rewards)\n",
     "\n",
     "\n",
@@ -273,51 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[121], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m env \u001b[39m=\u001b[39m load_frozen_lake(desc\u001b[39m=\u001b[39mdesc)\n\u001b[0;32m      4\u001b[0m Q \u001b[39m=\u001b[39m q_init(env)\n\u001b[1;32m----> 6\u001b[0m Q, total_rewards  \u001b[39m=\u001b[39m train(env, Q)\n\u001b[0;32m      7\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[0;32m      8\u001b[0m split_rewards \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msplit(np\u001b[39m.\u001b[39marray(total_rewards), \u001b[39m10\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[119], line 11\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(env, Q, episodes, max_steps, alpha, gamma, epsilon, min_epsilon, epsilon_decay)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(max_steps):\n\u001b[0;32m     10\u001b[0m     action \u001b[39m=\u001b[39m epsilon_greedy(Q, state, epsilon)\n\u001b[1;32m---> 11\u001b[0m     new_state, reward, done, action \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mstep(action)\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m done \u001b[39mand\u001b[39;00m reward \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     13\u001b[0m         reward \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 4)"
-     ]
-    }
-   ],
-   "source": [
-    "np.random.seed(0)\n",
-    "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
-    "env = load_frozen_lake(desc=desc)\n",
-    "Q = q_init(env)\n",
-    "\n",
-    "Q, total_rewards  = train(env, Q)\n",
-    "print(Q)\n",
-    "split_rewards = np.split(np.array(total_rewards), 10)\n",
-    "for i, rewards in enumerate(split_rewards):\n",
-    "    print((i+1) * 500, ':', np.mean(rewards))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "********Average reward per thousand episodes********\n",
-      "\n",
-      "1000 :  99.9999999999986\n",
-      "2000 :  99.9999999999986\n",
-      "3000 :  99.9999999999986\n",
-      "4000 :  99.9999999999986\n",
-      "5000 :  99.9999999999986\n"
+      "[[100. 100.]\n",
+      " [100. 100.]]\n"
      ]
     }
    ],
@@ -343,12 +344,13 @@
     "    Q = np.zeros((2, 2))  # Initialize the Q-table\n",
     "    \n",
     "    # Train the agent and get the final Q-values and total rewards\n",
-    "    Q, total_rewards = train(env, Q)\n"
+    "    Q, total_rewards = train(env, Q)\n",
+    "print(Q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
