--- a/reinforcement_learning/q_learning/frozen_lake.ipynb
+++ b/reinforcement_learning/q_learning/frozen_lake.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,8 +42,6 @@
     }
    ],
    "source": [
-    "!pip install numpy\n",
-    "!pip install gym\n",
     "import numpy as np\n",
     "import gym\n",
     "import random\n",
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +245,7 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "0\n"
+      "2\n"
      ]
     }
    ],
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,33 +274,42 @@
     "    total_rewards = []\n",
     "    for episode in range(episodes):\n",
     "        # initialize new episode parameters\n",
-    "        state = env.reset()[0]\n",
+    "        state, _ = env.reset()\n",
     "        done = False\n",
     "        rewards = 0\n",
     "\n",
     "        for step in range(max_steps):\n",
     "            # exploration/exploitation trade-off\n",
-    "            exploration_rate_threshold = random.uniform(0, 1)\n",
-    "            if exploration_rate_threshold > epsilon:\n",
-    "                action = np.argmax(Q[state,: ])\n",
-    "            else:\n",
-    "                action = env.action_space.sample()\n",
-    "        new_state, reward, done, truncated, info = env.step(action)\n",
-    "        # Update Q-table for Q(s,a)\n",
-    "        Q[state, action] = Q[state, action] * (1 - alpha) + \\\n",
-    "        alpha * (reward + gamma * np.max(Q[new_state, :]))\n",
+    "            action = epsilon_greedy(Q, state, epsilon)\n",
+    "            # print(\"Action: \", action)\n",
     "\n",
-    "        state = new_state\n",
-    "        rewards_current_episode += reward \n",
+    "            new_state, reward, done, _, _ = env.step(action)\n",
+    "            # print(\"Episode: \", episode, \"Step: \", step)\n",
+    "            # print(\"New State: \", new_state, \"Reward: \", reward, \"Terminated: \", terminated)\n",
     "\n",
-    "        if done == True:\n",
-    "            break\n",
+    "            if reward == 1.0 and done == True:\n",
+    "                rewards += reward\n",
+    "            if reward == 0.0 and done == True:\n",
+    "                rewards -= 1\n",
+    "                reward = -1\n",
+    "            if reward == 0.0 and step + 1 == max_steps:\n",
+    "                rewards += 0\n",
+    "\n",
+    "            # Update Q-table for Q(s,a)\n",
+    "            Q[state, action] = Q[state, action] * (1 - alpha) + \\\n",
+    "            alpha * (reward + gamma * np.max(Q[new_state, :]))\n",
+    "\n",
+    "            state = new_state\n",
+    "            total_rewards += reward \n",
+    "\n",
+    "            if done == True:\n",
+    "                break\n",
     "\n",
     "        # Exploration rate decay\n",
-    "        alpha = min_epsilon + \\\n",
+    "    epsilon = min_epsilon + \\\n",
     "    (max_steps - min_epsilon) * np.exp(-epsilon_decay*episode)\n",
     "\n",
-    "        total_rewards.append(rewards)\n",
+    "    total_rewards.append(rewards)\n",
     "\n",
     "\n",
     "    return Q, total_rewards"
@@ -310,47 +317,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[100. 100.]\n",
-      " [100. 100.]]\n"
+      "[[ 0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0. ]\n",
+      " [ 0.5  0.7  1.  -1. ]\n",
+      " [ 0.   0.   0.   0. ]]\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\clayb\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\utils\\passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m Q \u001b[39m=\u001b[39m q_init(env)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[1;32m----> 7\u001b[0m Q, total_rewards  \u001b[39m=\u001b[39m train(env, Q)\n\u001b[0;32m      8\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[0;32m      9\u001b[0m split_rewards \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msplit(np\u001b[39m.\u001b[39marray(total_rewards), \u001b[39m10\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[10], line 30\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(env, Q, episodes, max_steps, alpha, gamma, epsilon, min_epsilon, epsilon_decay)\u001b[0m\n\u001b[0;32m     27\u001b[0m     rewards \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     29\u001b[0m \u001b[39m# Update Q-table for Q(s,a)\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m Q[state, action] \u001b[39m=\u001b[39m Q[state, action] \u001b[39m*\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m alpha) \u001b[39m+\u001b[39m \\\n\u001b[0;32m     31\u001b[0m alpha \u001b[39m*\u001b[39m (reward \u001b[39m+\u001b[39m gamma \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mmax(Q[new_state, :]))\n\u001b[0;32m     33\u001b[0m state \u001b[39m=\u001b[39m new_state\n\u001b[0;32m     34\u001b[0m total_rewards \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m reward \n",
+      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
      ]
     }
    ],
    "source": [
-    "class DummyEnv:\n",
-    "    def __init__(self):\n",
-    "        self.action_space = self.DummyActionSpace()\n",
-    "        \n",
-    "    class DummyActionSpace:\n",
-    "        def sample(self):\n",
-    "            return np.random.choice([0, 1])  # Assuming two actions: 0 and 1\n",
-    "\n",
-    "    def reset(self):\n",
-    "        return 0\n",
-    "\n",
-    "    def step(self, action):\n",
-    "        return 1, 1, False, {}\n",
-    "\n",
-    "\n",
-    "# Main Section\n",
-    "if __name__ == \"__main__\":\n",
-    "    env = DummyEnv()  # Initialize the environment\n",
-    "    Q = np.zeros((2, 2))  # Initialize the Q-table\n",
-    "    \n",
-    "    # Train the agent and get the final Q-values and total rewards\n",
-    "    Q, total_rewards = train(env, Q)\n",
-    "print(Q)"
+    "print(Q)\n",
+    "np.random.seed(0)\n",
+    "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
+    "env = load_frozen_lake(desc=desc)\n",
+    "Q = q_init(env)\n",
+    "print(Q)\n",
+    "Q, total_rewards  = train(env, Q)\n",
+    "print(Q)\n",
+    "split_rewards = np.split(np.array(total_rewards), 10)\n",
+    "for i, rewards in enumerate(split_rewards):\n",
+    "    print((i+1) * 500, ':', np.mean(rewards))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output of env.step(action): (0, 0.0, False, False, {'prob': 1.0})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the environment and Q-table as you did before\n",
+    "env = load_frozen_lake(desc=desc)\n",
+    "Q = q_init(env)\n",
+    "\n",
+    "# Reset the environment to get the initial state\n",
+    "initial_state = env.reset()\n",
+    "\n",
+    "# Choose an action (for testing purposes, let's choose 0)\n",
+    "action = 0\n",
+    "\n",
+    "# Now, try running the step function and print its output\n",
+    "output = env.step(action)\n",
+    "print(\"Output of env.step(action):\", output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[243], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m env \u001b[39m=\u001b[39m load_frozen_lake(desc\u001b[39m=\u001b[39mdesc)\n\u001b[0;32m      4\u001b[0m Q \u001b[39m=\u001b[39m q_init(env)\n\u001b[1;32m----> 6\u001b[0m Q, total_rewards  \u001b[39m=\u001b[39m train(env, Q)\n\u001b[0;32m      7\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[0;32m      8\u001b[0m split_rewards \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msplit(np\u001b[39m.\u001b[39marray(total_rewards), \u001b[39m10\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[236], line 30\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(env, Q, episodes, max_steps, alpha, gamma, epsilon, min_epsilon, epsilon_decay)\u001b[0m\n\u001b[0;32m     27\u001b[0m     rewards \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     29\u001b[0m \u001b[39m# Update Q-table for Q(s,a)\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m Q[state, action] \u001b[39m=\u001b[39m Q[state, action] \u001b[39m*\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m alpha) \u001b[39m+\u001b[39m \\\n\u001b[0;32m     31\u001b[0m alpha \u001b[39m*\u001b[39m (reward \u001b[39m+\u001b[39m gamma \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mmax(Q[new_state, :]))\n\u001b[0;32m     33\u001b[0m state \u001b[39m=\u001b[39m new_state\n\u001b[0;32m     34\u001b[0m total_rewards \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m reward \n",
+      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
+    "env = load_frozen_lake(desc=desc)\n",
+    "Q = q_init(env)\n",
+    "\n",
+    "Q, total_rewards  = train(env, Q)\n",
+    "print(Q)\n",
+    "split_rewards = np.split(np.array(total_rewards), 10)\n",
+    "for i, rewards in enumerate(split_rewards):\n",
+    "    print((i+1) * 500, ':', np.mean(rewards))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,8 +473,15 @@
       "\n",
       "********Q-table********\n",
       "\n",
-      "[[100. 100.]\n",
-      " [100. 100.]]\n"
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
      ]
     }
    ],
