--- a/reinforcement_learning/q_learning/frozen_lake.ipynb
+++ b/reinforcement_learning/q_learning/frozen_lake.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "2\n"
+      "0\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,16 +272,16 @@
     "          min_epsilon=0.1, epsilon_decay=0.05):\n",
     "    \"\"\"Train agent to learn Q-values.\"\"\"\n",
     "    total_rewards = []\n",
+    "\n",
     "    for episode in range(episodes):\n",
     "        # initialize new episode parameters\n",
     "        state, _ = env.reset()\n",
-    "        done = False\n",
-    "        rewards = 0\n",
+    "        ### done = False\n",
+    "        ep_rewards = 0\n",
     "\n",
     "        for step in range(max_steps):\n",
     "            # exploration/exploitation trade-off\n",
     "            action = epsilon_greedy(Q, state, epsilon)\n",
-    "            # print(\"Action: \", action)\n",
     "\n",
     "            new_state, reward, done, _, _ = env.step(action)\n",
     "            # print(\"Episode: \", episode, \"Step: \", step)\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -345,23 +345,15 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\clayb\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\utils\\passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
-      "  if not isinstance(terminated, (bool, np.bool8)):\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "ename": "TypeError",
+     "evalue": "'float' object is not iterable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m Q \u001b[39m=\u001b[39m q_init(env)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[1;32m----> 7\u001b[0m Q, total_rewards  \u001b[39m=\u001b[39m train(env, Q)\n\u001b[0;32m      8\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[0;32m      9\u001b[0m split_rewards \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msplit(np\u001b[39m.\u001b[39marray(total_rewards), \u001b[39m10\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[10], line 30\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(env, Q, episodes, max_steps, alpha, gamma, epsilon, min_epsilon, epsilon_decay)\u001b[0m\n\u001b[0;32m     27\u001b[0m     rewards \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     29\u001b[0m \u001b[39m# Update Q-table for Q(s,a)\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m Q[state, action] \u001b[39m=\u001b[39m Q[state, action] \u001b[39m*\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m alpha) \u001b[39m+\u001b[39m \\\n\u001b[0;32m     31\u001b[0m alpha \u001b[39m*\u001b[39m (reward \u001b[39m+\u001b[39m gamma \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mmax(Q[new_state, :]))\n\u001b[0;32m     33\u001b[0m state \u001b[39m=\u001b[39m new_state\n\u001b[0;32m     34\u001b[0m total_rewards \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m reward \n",
-      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m Q \u001b[39m=\u001b[39m q_init(env)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[1;32m----> 7\u001b[0m Q, total_rewards  \u001b[39m=\u001b[39m train(env, Q)\n\u001b[0;32m      8\u001b[0m \u001b[39mprint\u001b[39m(Q)\n\u001b[0;32m      9\u001b[0m split_rewards \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msplit(np\u001b[39m.\u001b[39marray(total_rewards), \u001b[39m10\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[21], line 34\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(env, Q, episodes, max_steps, alpha, gamma, epsilon, min_epsilon, epsilon_decay)\u001b[0m\n\u001b[0;32m     30\u001b[0m Q[state, action] \u001b[39m=\u001b[39m Q[state, action] \u001b[39m*\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m alpha) \u001b[39m+\u001b[39m \\\n\u001b[0;32m     31\u001b[0m alpha \u001b[39m*\u001b[39m (reward \u001b[39m+\u001b[39m gamma \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mmax(Q[new_state, :]))\n\u001b[0;32m     33\u001b[0m state \u001b[39m=\u001b[39m new_state\n\u001b[1;32m---> 34\u001b[0m total_rewards \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m reward \n\u001b[0;32m     36\u001b[0m \u001b[39mif\u001b[39;00m done \u001b[39m==\u001b[39m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     37\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'float' object is not iterable"
      ]
     }
    ],
